--- a/basicos/package.json
+++ b/basicos/package.json
@@ -1,19 +1,14 @@
 {
   "name": "basicos",
-  "version": "1.0.0",
-  "main": "main.js",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/elangelsp/dom_javascript.git"
-  },
-  "author": "AngelCM",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/elangelsp/dom_javascript/issues"
-  },
-  "homepage": "https://github.com/elangelsp/dom_javascript#readme",
-  "description": ""
+  "devDependencies": {
+    "vite": "5.4.10"
+  }
 }
