--- a/basicos/package.json
+++ b/basicos/package.json
@@ -1,9 +1,11 @@
 {
   "name": "basicos",
+  "author": "AngelCM",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite dev",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
